# MSC_Deuteron

./: setup.py
Notebooks/: Asymmetry.ipynb  CrossSection.ipynb  Programs.ipynb  TheoreticalDescription.ipynb
cmake_program/: CMakeLists.txt  Doxyfile.in.bak
cmake_program/doc/html/: F1F209__test_8f.html  F1F209__test_8f.js  F1F209__test_8f_source.html  NucleonStructure_8cpp.html  NucleonStructure_8cpp.js  NucleonStructure_8cpp__incl.map  NucleonStructure_8cpp__incl.md5  NucleonStructure_8cpp_source.html  NucleonStructure_8hpp.html  NucleonStructure_8hpp__dep__incl.map  NucleonStructure_8hpp__dep__incl.md5  NucleonStructure_8hpp__incl.map  NucleonStructure_8hpp__incl.md5  NucleonStructure_8hpp_source.html  R199x_8f.html  R199x_8f.js  R199x_8f_source.html  TDeuteron_8cpp.html  TDeuteron_8cpp.js  TDeuteron_8cpp__incl.map  TDeuteron_8cpp__incl.md5  TDeuteron_8cpp_source.html  TDeuteron_8h.html  TDeuteron_8h__dep__incl.map  TDeuteron_8h__dep__incl.md5  TDeuteron_8h__incl.map  TDeuteron_8h__incl.md5  TDeuteron_8h_source.html  TYukawaPWF_8cpp.html  TYukawaPWF_8cpp.js  TYukawaPWF_8cpp__incl.map  TYukawaPWF_8cpp__incl.md5  TYukawaPWF_8cpp_source.html  TYukawaPWF_8h.html  TYukawaPWF_8h__dep__incl.map  TYukawaPWF_8h__dep__incl.md5  TYukawaPWF_8h__incl.map  TYukawaPWF_8h__incl.md5  TYukawaPWF_8h_source.html  alekhin_8f.html  (+98 more)
cmake_program/doc/latex/: F1F209__test_8f.tex  NucleonStructure_8cpp.tex  NucleonStructure_8cpp__incl.md5  NucleonStructure_8hpp.tex  NucleonStructure_8hpp__dep__incl.md5  NucleonStructure_8hpp__incl.md5  R199x_8f.tex  TDeuteron_8cpp.tex  TDeuteron_8cpp__incl.md5  TDeuteron_8h.tex  TDeuteron_8h__dep__incl.md5  TDeuteron_8h__incl.md5  TYukawaPWF_8cpp.tex  TYukawaPWF_8cpp__incl.md5  TYukawaPWF_8h.tex  TYukawaPWF_8h__dep__incl.md5  TYukawaPWF_8h__incl.md5  alekhin_8f.tex  annotated.tex  classNucleonStructure.tex  classNucleonStructure__coll__graph.md5  classTDeuteron.tex  classTDeuteron_1_1Polarization.tex  classTDeuteron_1_1Polarization__coll__graph.md5  classTDeuteron_1_1Wavefunction.tex  classTYukawaPWF.tex  (+21 more)
cmake_program/lib/: libNuclF1F2.so.1.0.0
cmake_program/progs/: CMakeLists.txt  structure_function.cpp
cmake_program/src/: CMakeLists.txt  TDeuteron.h  alekhin.f  constants.hpp  cteq.f  grsv2000pdf_g1.f
(+91 files in other folders)
